<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

<!--    <EditText-->
<!--        android:id="@+id/ed_total_cost"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/cost_or_total_price"-->
<!--        android:inputType="numberDecimal" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_or_total_price">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_total_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="#616161" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/select_vat_percentage"
        android:textSize="18sp"
        android:textStyle="bold" />



        <RadioGroup
            android:id="@+id/rg_vat_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_vat_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                android:textColor="#795548" />

            <RadioButton
                android:id="@+id/rb_vat_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                android:textColor="#795548" />

            <RadioButton
                android:id="@+id/rb_vat_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_20"
                android:textColor="#795548" />
        </RadioGroup>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_round_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/round_up_total"
        android:textColor="#795548" />

<!--    <Button-->
<!--        android:id="@+id/btn_calculate_vat"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:backgroundTint="@color/dark"-->
<!--        android:text="@string/calculate_vat" />-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calculate_vat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_vat"
        android:textColor="#FFF8E1" />

    <TextView
        android:id="@+id/txt_cost_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColor="#795548"
        tools:text="@string/app_name" />

</LinearLayout>